[gd_scene load_steps=2 format=3 uid="uid://dbebhudakjrr2"]

[ext_resource type="Script" path="res://game_files/wrsm/region_cell/RegionCell.gd" id="1_c568x"]

[node name="RegionCell" type="Node2D"]
script = ExtResource("1_c568x")

[node name="Utils" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="CameraBottomRightLimit" type="Marker2D" parent="Utils"]
metadata/_edit_lock_ = true

[node name="CameraTargets" type="Node2D" parent="Utils"]
metadata/_edit_lock_ = true

[node name="PlayerDetector" type="Area2D" parent="Utils"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2d" type="CollisionShape2D" parent="Utils/PlayerDetector"]

[node name="RegionCellDetectorContainer" type="Node2D" parent="Utils"]
metadata/_edit_lock_ = true

[node name="Environment" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="CellChangers" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Interactables" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Items" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Enemies" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="ProjectileLayer" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Effects" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[connection signal="body_entered" from="Utils/PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="Utils/PlayerDetector" to="." method="_on_player_detector_body_exited"]
